# Locator

./: .gitignore  CMakeLists.txt  README.md  settings.json
locator/: CMakeLists.txt  cell.hpp  locator.cpp  locator.hpp  subscriber.hpp  trigger.hpp
tests/: CMakeLists.txt  loc_test.cpp
